--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,39 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.distopik</groupId>
-  <artifactId>reactor-wamp</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.distopik</groupId>
+	<artifactId>reactor-wamp</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<dependency>
+		<groupId>io.projectreactor</groupId>
+		<artifactId>reactor-core</artifactId>
+		<version>2.0.1.BUILD-SNAPSHOT</version>
+	</dependency>
+
+	<dependency>
+		<groupId>io.projectreactor</groupId>
+		<artifactId>reactor-stream</artifactId>
+		<version>2.0.1.BUILD-SNAPSHOT</version>
+	</dependency>
+
+	<dependency>
+		<groupId>io.projectreactor</groupId>
+		<artifactId>reactor-net</artifactId>
+		<version>2.0.1.BUILD-SNAPSHOT</version>
+	</dependency>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
