--- a/pom.xml
+++ b/pom.xml
@@ -4,24 +4,31 @@
 	<groupId>com.distopik</groupId>
 	<artifactId>reactor-wamp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<repositories>
+		<repository>
+			<id>io.projectreactor</id>
+			<url>http://repo.spring.io/libs-release</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
-			<version>2.0.1.BUILD-SNAPSHOT</version>
+			<version>2.0.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-stream</artifactId>
-			<version>2.0.1.BUILD-SNAPSHOT</version>
+			<version>2.0.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-net</artifactId>
-			<version>2.0.1.BUILD-SNAPSHOT</version>
+			<version>2.0.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -82,6 +89,12 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.3</version>
 		</dependency>
 	</dependencies>
 
