--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.distopik</groupId>
 	<artifactId>reactor-wamp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<repositories>
 		<repository>
 			<id>io.projectreactor</id>
@@ -39,8 +39,8 @@
 
 		<dependency>
 			<groupId>org.msgpack</groupId>
-			<artifactId>msgpack-core</artifactId>
-			<version>0.7.0-p9</version>
+			<artifactId>jackson-dataformat-msgpack</artifactId>
+			<version>0.7.0-p8</version>
 		</dependency>
 
 		<dependency>
