--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.eclipse.jetty.websocket</groupId>
 			<artifactId>javax-websocket-server-impl</artifactId>
-			<version>9.3.0.M2</version>
+			<version>9.3.24.v20180605</version>
 		</dependency>
 
 		<dependency>
@@ -70,19 +70,19 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-			<version>9.3.0.M2</version>
+			<version>9.3.24.v20180605</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.3.0.M2</version>
+			<version>9.3.24.v20180605</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-util</artifactId>
-			<version>9.3.0.M2</version>
+			<version>9.3.24.v20180605</version>
 		</dependency>
 
 		<dependency>
