--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,12 @@
 			<version>9.3.24.v20180605</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>9.3.24.v20180605</version>
-		</dependency>
+<dependency>
+  <groupId>org.eclipse.jetty</groupId>
+  <artifactId>jetty-server</artifactId>
+  <version>[9.4.12.v20180830,)</version>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
